# OpenGL_learning

./: CMakeLists.txt  CMakePresets.json  HACKING.md  basic_vertex.glsl
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/glad/: glad.h
source/: glad.c  lib.cpp  main.cpp
test/: CMakeLists.txt
